CHANGES

3.47 - 2014-03-27 - minor maintenance release

- fixed: missing entities when parsing HTML
  RT #93604 https://rt.cpan.org/Public/Bug/Display.html?id=93604

3.46 - 2014-03-05 - minor maintenance release

- fixed: test failed on Windows

3.45 - 2014-02-27 - minor maintenance release

- fixed: link to idented_a format description
  RT #85400 https://rt.cpan.org/Public/Bug/Display.html?id=85400
  fixed by Martin McGrath

- fixed: code that gave a warning in 5.19.9

- fixed: RT #86651 https://rt.cpan.org/Ticket/Display.html?id=86773
  xml_pp, quote not escaped in attribute values

- fixed various typos in docs RT#87660
  thanks to David Steinbrunner

- fixed: RT #86773 https://rt.cpan.org/Ticket/Display.html?id=86773 
  CDATA sections in HTML were not properly escaped when using the
  (default) HTML::TreeBuilder conversion
  spotted by Marco Pessotto

- fixed: RT #85933 https://rt.cpan.org/Ticket/Display.html?id=85933
  quotes in attributes were not properly escaped
  dpotted by Arun Lakhana

- added: docs for tools and safe_print_to_file

- added: support for XPath variables
  thanks to Nathan Glenn for the initial implementation

- updated: Changes to conform to CPAN::Changes + test


3.44 - 2013-05-13 - minor maintenance release

- added: XML::Twig::Elt new method now acccepts literal content, eg
  my $e= XML::Twig::Elt->new( '<div><p>foo</p><p>bar</p></div>');

- added: twig handler triggers now accept the syntax <tag>#<id>
  use *#<id> if you don't want to specify the tag name (#<id> would not
  work since this is the syntax for "private" elements, this makes it
  ugly, but is due to the fact that when I started working on XML::Twig
  CSS wasn't really around)

- fixed: merge had some problems dealing with embedded comments

- improved: more tests

- improved: make Changes conform to the CPAN::Changes spec


3.43 - 2013-02-31 - minor maintenance release

- improved: docs for parse, see RT #78877
  https://rt.cpan.org/Ticket/Display.html?id=78877
