@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 use XML::Twig;
-use Test::More tests => 2;
+use Test::More tests => 3;
 
 use utf8;
 
@@ -31,6 +31,14 @@ foreach my $module ( sort keys  %html_conv)
       }
   }
 
+{ # test RT #94295 https://rt.cpan.org/Public/Bug/Display.html?id=94295
+  # '=' in regexps on attributes are turned into 'eq'
+  my $xml= '<doc><e dn="foo=1 host=0">e1</e><e dn="foo=1 host=2">e2</e></doc>';
+  my $r;
+  my $t= XML::Twig->new( twig_handlers => { 'e[@dn =~ /host=0/]' => sub { $r.= $_->text } })
+                  ->parse( $xml);
+  is( $r, 'e1', 'regexp on attribute, including an = sign');
+}
 exit;
 
 
